--- a/src/Styles/DCard.module.css
+++ b/src/Styles/DCard.module.css
@@ -339,14 +339,11 @@
 }
 
 .error {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  color: #fff;
-  background-color: #333;
-  font-family: "Quicksand", sans-serif;
-  font-size: 1.2rem;
-  text-align: center;
-  padding: 1rem;
+ width: 100%;
+ display: flex;
+ height: 100vh;
+ justify-content: center;
+ align-items: center;
+ gap: 0.5rem;
+ background-color: whitesmoke;
 }
