--- a/src/Styles/Spring.module.css
+++ b/src/Styles/Spring.module.css
@@ -59,6 +59,7 @@
     border-top: 1px solid #4B5237;
     will-change: opacity;
     transition: all 0.3s ease-in-out;
+    cursor: pointer;
     &:hover {
       border-top: 1px solid #4B5237;
       box-shadow: 0px 0px 15px #868a7c;
@@ -78,6 +79,7 @@
   .place{
     position: absolute;
     width: 100%;
+    cursor: pointer;
     height: 100%;
     color: #4B5237;
     font-size: clamp(2rem, 0.851rem + 2.388vw, 3rem);
@@ -100,7 +102,6 @@
     align-items: end;
     text-align:center;
     padding-bottom: 1rem;
-    cursor: default;
   }
   
  .imageContainer {
